log/Laser_DAQ_Camera_App_log_190214_105233.txt
2019-02-14T10:52:33|CRITICAL|root|Unhandled exception:Traceback (most recent call last):
  File "C:\LabPrograms\Python\DAQ-Laser-Camera\Laser_DAQ_Camera_App.py", line 35, in <module>
    app = Laser_DAQ_Camera_App(sys.argv)
  File "C:\LabPrograms\Python\BaseMicroscopeModified_ScopeFoundry\BaseMicroscopeAppModified.py", line 16, in __init__
    super().__init__(*kwds) # *kwds is needed since in the main we pass as argument sys.argv. Without
  File "C:\ProgramData\Anaconda3\lib\site-packages\ScopeFoundry\base_app.py", line 332, in __init__
    self.setup()
  File "C:\LabPrograms\Python\DAQ-Laser-Camera\Laser_DAQ_Camera_App.py", line 11, in setup
    from ni_co_hardware import NI_CO_hw
  File "C:\LabPrograms\Python\nidaqmx_test\ni_co_hardware.py", line 93
    return float("{0:.6f}".format(self.freq.val))self.freq.val
                                                    ^
SyntaxError: invalid syntax

